# ec-extension

./: .dockerignore  README.md  compose.ci.yml  compose.yml  docker-compose.yml  otel-collector-config.yaml
backend/: .env.example  Cargo.toml
backend/.cursor/rules/: backend-rust.mdc
backend/apidef/: openapi.yml
backend/migration/: Cargo.toml
backend/migration/init/: 0010_user.sql  0011_role.sql  0012_user_role.sql  0013_permission.sql  0015_role_resource_permission.sql
backend/migration/seed/: permission.sql  resource.sql  role.sql  role_resource_permission.sql  user.sql
backend/migration/src/: lib.rs  m20250119_074443_create_user.rs  m20250119_075309_create_role.rs  m20250119_080141_create_user_role.rs  m20250119_081242_create_resource.rs  m20250119_081338_create_permission.rs  m20250119_081745_create_role_resource_permission.rs  m20250621_055742_create_user_group.rs  m20250621_061224_create_user_group_role.rs  m20250621_061502_create_user_user_group.rs
backend/src/: domain.rs  entity.rs  infrastructure.rs  interface.rs  lib.rs  main.rs  usecase.rs
backend/src/domain/: authorized_resource.rs  inventory.rs  inventory_level.rs  line_item.rs  media.rs  money.rs  product.rs
backend/src/domain/address/: address.rs
backend/src/domain/authorized_resource/: authorized_resource.rs
backend/src/domain/customer/: customer.rs
backend/src/domain/draft_order/: draft_order.rs
backend/src/domain/email/: email.rs
backend/src/domain/error/: error.rs
backend/src/domain/inventory/: inventory.rs  inventory_level.rs
backend/src/domain/inventory_change/: inventory_change.rs
backend/src/domain/inventory_item/: inventory_item.rs
backend/src/domain/inventory_level/: inventory_change.rs  inventory_level.rs
backend/src/domain/line_item/: line_item.rs
backend/src/domain/location/: location.rs
backend/src/domain/media/: associated_id.rs  media.rs  media_content.rs
backend/src/domain/money/: currency_code.rs  money.rs  money_bag.rs
backend/src/domain/phone/: phone.rs
backend/src/domain/product/: barcode.rs  product.rs  variant.rs
backend/src/domain/user/: user.rs
backend/src/entity/error/: error.rs
backend/src/entity/media/: media.rs
backend/src/entity/product/: product.rs
backend/src/infrastructure/: auth.rs  db.rs  ec.rs  error.rs  mod.rs  module.rs  router.rs
backend/src/infrastructure/auth/: auth_middleware.rs  authenticator.rs  authenticator_interface.rs  authorizer_interface.rs  cognito.rs  idp_user.rs  rbac.rs
backend/src/infrastructure/config/: config.rs
backend/src/interface/: controller.rs  mock.rs  presenter.rs
backend/src/usecase/: auth.rs  authorizer.rs  interactor.rs  mod.rs  product_interactor_interface.rs  query_service.rs  repository.rs  user.rs
backend/tests/: mod.rs
backend/tests/common/: mod.rs
backend/tests/product/: integration_test.rs
cdk/lib/: ci.ts  (+6 more)
(+313 files in other folders)
