[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-http = "3.9"
env_logger = "0.11"
log = "0.4"
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
derive-getters = "0.5"
mockall = "0.13"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11.0"
actix-cors = "0.7.0"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
aws-config = { version = "1.5.12", features = ["behavior-version-latest"] }
aws-sdk-cognitoidentityprovider = "1.62.0"
diesel = { version = "2.2.6", features = ["r2d2", "postgres", "chrono",]}

[dev-dependencies]
