[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "migration",
]

[dependencies]
actix-web = "4"
actix-http = "3.9"
env_logger = "0.11"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"]  }
slog-async = "2.8.0"
slog-term = "2.9.1"
slog-json = "2.6.1"
slog-envlogger = "2.2.0"
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
derive-getters = "0.5"
mockall = "0.13"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11.0"
actix-cors = "0.7.0"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
aws-config = { version = "1.5.12", features = ["behavior-version-latest"] }
aws-sdk-cognitoidentityprovider = "1.62.0"
sea-orm = { version = "1.1.3", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
rand = "0.8.5"
once_cell = "1.19.0"
opentelemetry = "0.29.1"
opentelemetry-otlp = "0.29.0"
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
tracing = "0.1.41"
tracing-actix-web = "0.7.18"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = "0.3.19"

[dev-dependencies]
